--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finally",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "axios": "^1.2.0",
+    "delay": "^5.0.0",
+    "events": "^3.3.0",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
