--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "react-native-dotenv": "^3.4.2",
     "tailwindcss": "^3.2.4"
   },
   "private": true
