--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "finally",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,8 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "axios": "^1.2.0",
+    "delay": "^5.0.0",
+    "events": "^3.3.0",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
@@ -21,6 +25,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "react-native-dotenv": "^3.4.2",
     "tailwindcss": "^3.2.4"
   },
   "private": true
