--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "delay": "^5.0.0",
     "events": "^3.3.0",
     "expo": "~47.0.8",
+    "expo-font": "^11.0.1",
     "expo-linear-gradient": "^12.0.1",
+    "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
