--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "finally",
+    "name": "Finally",
     "slug": "finally",
     "version": "1.0.0",
     "orientation": "portrait",
