--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "axios": "^1.2.0",
     "delay": "^5.0.0",
     "events": "^3.3.0",
-    "expo": "~47.0.8",
+    "expo": "^47.0.8",
     "expo-font": "^11.0.1",
     "expo-linear-gradient": "^12.0.1",
+    "expo-location": "^15.0.1",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
