--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/slider": "4.2.4",
     "@react-navigation/native": "^6.0.16",
     "@react-navigation/native-stack": "^6.9.4",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.0",
     "delay": "^5.0.0",
     "events": "^3.3.0",
@@ -30,7 +31,8 @@
     "react-native-dropdown-select-list": "^2.0.2",
     "react-native-maps": "^1.3.2",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
