--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-location": "^15.0.1",
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
+    "floor": "^0.0.0",
     "nativewind": "^2.0.11",
     "postcss": "8.0.9",
     "react": "18.1.0",
