--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "delay": "^5.0.0",
     "events": "^3.3.0",
     "expo": "^47.0.8",
+    "expo-file-system": "^15.1.1",
     "expo-font": "^11.0.1",
     "expo-image-picker": "^14.0.2",
     "expo-linear-gradient": "^12.0.1",
@@ -27,6 +28,7 @@
     "expo-splash-screen": "^0.17.5",
     "expo-status-bar": "~1.4.2",
     "floor": "^0.0.0",
+    "form-data": "^4.0.0",
     "nativewind": "^2.0.11",
     "postcss": "8.0.9",
     "react": "18.1.0",
